--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                 <div class="home__container cointainer grid">
                     <div class="home__data">
                         <h1 class="home__title">
-                            Discover <br> Most suitable <br> Property
+                            Descubre <br> tu <br> proxima <span>Casa</span>
                         </h1>
                         <p class="home__description">
-                            Find a varierty of properties that suits you very easily,
-                            forget all difficulties in finding a residence for you
+                            Encuentre una variedad de propiedades que se adapte a usted muy fácilmente, 
+                            olvídese de todas las dificultades para encontrar una residencia. Rapides, confianza
                         </p>
 
                         <form action="" class="home__search">
@@ -92,7 +92,7 @@
                                     9k <span>+</span>
                                 </h1>
                                 <span class="home__value-description">
-                                    Premium <br> Product
+                                    Productos <br> Premium
                                 </span>
                             </div>
                             
@@ -101,7 +101,7 @@
                                     2k <span>+</span>
                                 </h1>
                                 <span class="home__value-description">
-                                    Happy <br> Customer
+                                    Clientes <br> Satisfechos
                                 </span>
                             </div>
 
@@ -110,7 +110,7 @@
                                     28k <span>+</span>
                                 </h1>
                                 <span class="home__value-description">
-                                    Awards<br> Winning
+                                    Casas<br> Vendidas
                                 </span>
                             </div>
                         </div>
@@ -147,9 +147,9 @@
             <!--==================== POPULAR ====================-->
             <section class="popular section" id="popular">
                 <div class="container">
-                    <span class="section__subtitle">Best Choise</span>
+                    <span class="section__subtitle">Mejores opciones</span>
                     <h2 class="section__title">
-                        Popular Residence<span>.</span>
+                        Residencias populares<span>.</span>
                     </h2>
                     <div class="popular__container swiper">
                         <div class="swiper-wrapper">
@@ -180,7 +180,7 @@
                                         Gables Luxurious House
                                     </h3>
                                     <p class="popular__description">
-                                        Street The Garden City Of Miraflores, Lima - Peru Av. Sol #9876
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa reiciendis in quod. Dolores molestias a pariatur animi error, hic nobis ullam soluta culpa eius deleniti repellendus incidunt? Nobis, animi molestias!
                                     </p>
                                 </div>
                             </article>
@@ -190,13 +190,14 @@
 
                                 <div class="popular__data">
                                     <h2 class="popular__price">
-                                        <span>$</span>35,159
+                                        <span>$</span>45,123
                                     </h2>
                                     <h3 class="popular__title">
                                         Gables Luxurious House
                                     </h3>
                                     <p class="popular__description">
                                         Street The Garden City Of Miraflores, Lima - Peru Av. Sol #9876
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ea libero suscipit tempora porro totam nemo. Id nostrum eius obcaecati rerum, enim maxime adipisci sequi itaque praesentium! Voluptatum, repudiandae facere.
                                     </p>
                                 </div>
                             </article>
@@ -205,13 +206,14 @@
 
                                 <div class="popular__data">
                                     <h2 class="popular__price">
-                                        <span>$</span>35,159
+                                        <span>$</span>89,553
                                     </h2>
                                     <h3 class="popular__title">
                                         Gables Luxurious House
                                     </h3>
                                     <p class="popular__description">
                                         Street The Garden City Of Miraflores, Lima - Peru Av. Sol #9876
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, id adipisci suscipit cumque sunt obcaecati laborum, nostrum error soluta deserunt eius modi molestiae, magnam beatae. Delectus maiores similique distinctio nam?
                                     </p>
                                 </div>
                             </article>
@@ -220,13 +222,13 @@
 
                                 <div class="popular__data">
                                     <h2 class="popular__price">
-                                        <span>$</span>35,159
+                                        <span>$</span>15,159
                                     </h2>
                                     <h3 class="popular__title">
                                         Gables Luxurious House
                                     </h3>
                                     <p class="popular__description">
-                                        Street The Garden City Of Miraflores, Lima - Peru Av. Sol #9876
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aperiam non, in suscipit dicta, id dolores rerum sed voluptas omnis unde quod? Vero dicta necessitatibus rerum exercitationem minus, ipsa nobis. The Garden City Of Miraflores, Lima - Peru Av. Sol #516136246
                                     </p>
                                 </div>
                             </article>
@@ -256,13 +258,13 @@
                         </div>
                         <div class="value__content">
                             <div class="value__data">
-                                <span class="section__subtitle">Our Value</span>
+                                <span class="section__subtitle">Nuestro valor</span>
                                 <h2 class="section__title">
-                                    Value We Give To You<span>.</span>
+                                    Valores que tenemos para ti<span>.</span>
                                 </h2>
                                 <p class="value__description">
-                                    We always ready to help by providing the best service for you
-                                    We believe a good place to live can make your life better.
+                                    Siempre estamos listos para ayudarlo brindándole el mejor servicio para usted
+                                    Creemos que un buen lugar para vivir puede mejorar su vida.
                                 </p>
                             </div>
 
@@ -271,7 +273,7 @@
                                     <header class="value__accordion-header">
                                         <i class='bx bxs-shield-x value__accordion-icon'></i>
                                         <h3 class="value__accordion-title">
-                                            Best interest rates on the market
+                                            Las mejores tasas de interés del mercado
                                         </h3>
                                         <div class="value__accordion-arrow">
                                             <i class='bx bxs-down-arrow'></i>
@@ -279,9 +281,9 @@
                                     </header>
                                     <div class="value__accordion-content">
                                         <p class="value__accordion-description">
-                                            Price we provides is the best for you,
-                                            we guarantee no price changes on your property due
-                                            to various unexpected costs that may come.
+                                            El precio que ofrecemos es el mejor para usted,
+                                            garantizamos que no habrá cambios de precio en su propiedad debido
+                                            a varios costos inesperados que pueden venir.
                                         </p>
                                     </div>
                                 </div>
@@ -289,7 +291,7 @@
                                     <header class="value__accordion-header">
                                         <i class='bx bxs-x-square value__accordion-icon'></i>
                                         <h3 class="value__accordion-title">
-                                            Prevent unstable prices
+                                            Evite precios inestables
                                         </h3>
                                         <div class="value__accordion-arrow">
                                             <i class='bx bxs-down-arrow'></i>
@@ -297,9 +299,9 @@
                                     </header>
                                     <div class="value__accordion-content">
                                         <p class="value__accordion-description">
-                                            Price we provides is the best for you,
-                                            we guarantee no price changes on your property due
-                                            to various unexpected costs that may come.
+                                            El precio que ofrecemos es el mejor para usted,
+                                            garantizamos que no habrá cambios de precio en su propiedad debido
+                                            a varios costos inesperados que pueden venir.
                                         </p>
                                     </div>
                                 </div>
@@ -307,17 +309,16 @@
                                     <header class="value__accordion-header">
                                         <i class='bx bx-bar-chart-alt value__accordion-icon' ></i>
                                         <h3 class="value__accordion-title">
-                                            Best prices on the market
-                                        </h3>
+                                            Los mejores precios del mercado                                        </h3>
                                         <div class="value__accordion-arrow">
                                             <i class='bx bxs-down-arrow'></i>
                                         </div>
                                     </header>
                                     <div class="value__accordion-content">
                                         <p class="value__accordion-description">
-                                            Price we provides is the best for you,
-                                            we guarantee no price changes on your property due
-                                            to various unexpected costs that may come.
+                                            El precio que ofrecemos es el mejor para usted,
+                                            garantizamos que no habrá cambios de precio en su propiedad debido
+                                            a varios costos inesperados que pueden venir.
                                         </p>
                                     </div>
                                 </div>
@@ -325,7 +326,7 @@
                                     <header class="value__accordion-header">
                                         <i class='bx bxs-checkbox-checked value__accordion-icon'></i>
                                         <h3 class="value__accordion-title">
-                                            Security of your data
+                                            Seguridad de sus datos
                                         </h3>
                                         <div class="value__accordion-arrow">
                                             <i class='bx bxs-down-arrow'></i>
@@ -333,9 +334,10 @@
                                     </header>
                                     <div class="value__accordion-content">
                                         <p class="value__accordion-description">
-                                            Price we provides is the best for you,
-                                            we guarantee no price changes on your property due
-                                            to various unexpected costs that may come.
+                                            El precio que ofrecemos es el mejor para usted,
+                                            garantizamos que no habrá cambios de precio en su propiedad debido
+                                            a varios costos inesperados que pueden venir.
+
                                         </p>
                                     </div>
                                 </div>
@@ -358,13 +360,14 @@
                             </div>
                         <div class="contact__content">
                             <div class="contact__data">
-                                <span class="section__subtitle">Contact Us</span>
+                                <span class="section__subtitle">Contactenos</span>
                                 <h2 class="section__title">
-                                    Easy to Contact us<span>.</span>
+                                    Facil de contactarnos<span>.</span>
                                 </h2>
                                 <p class="contact__description">
-                                    Is there a problem finding your dream home? Need a guide in buying first home? 
-                                    or need a consultation on residential issues? Just contact us
+                                    ¿Hay algún problema para encontrar la casa de sus sueños? ¿Necesita una guía para comprar la primera vivienda? 
+                                    o necesita una consulta sobre temas residenciales? Sólo tienes que ponerte en contacto con nosotros
+
                                 </p>
                             </div>
 
@@ -374,16 +377,16 @@
                                         <i class='bx bx-phone-call'></i>
                                         <div>
                                             <h3 class="contact__card-title">
-                                                Call
+                                                Contacto interno
                                             </h3>
                                             <p class="contact__card-description">
-                                                022.321.165.19
+                                                (022.321.165.19)
                                             </p>
                                         </div>
                                     </div>
 
                                     <button class="button contact__card-button">
-                                        Call Now
+                                        Llamenos
                                     </button>
                                 </div>
 
@@ -452,11 +455,11 @@
             <section class="subscribe section">
                 <div class="subscribe__container container">
                     <h1 class="subscribe__title">
-                        Get Started with NanoHome
+                        Empieze una nueva vida con NanoHome
                     </h1>
                     <p class="subscribe__description">
-                        Subscribe and find super attractive price
-                        quetes from us, Find your residence sean
+                        Suscríbete y encuentra un precio súper atractivo
+                        de parte de nosotros, Encuentra tu residencia
                     </p>
                     <a href="#" class="button subscribe__button">
                         Get Started
@@ -473,15 +476,15 @@
                         NanoHome <i class="bx bxs-home-alt-2"></i>
                     </a>
                     <p class="footer__description">
-                        Our vision is to make all people <br>
-                        the best place to live for them.
+                        Nuestra visión es hacer que todas las personas <br>
+                        encuentren el mejor lugar para vivir.
                     </p>
                 </div>
 
                 <div class="footer__content">
                     <div>
                         <h3 class="footer__title">
-                            About
+                            Acerca
                         </h3>
 
                             <ul class="footer__links">
