--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                         <i class='bx bx-phone-call'></i>
                                         <div>
                                             <h3 class="contact__card-title">
-                                                Contacto interno
+                                                Contacto
                                             </h3>
                                             <p class="contact__card-description">
                                                 (022.321.165.19)
